--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_plus">PlusActivity</string>
     <string name="title_activity_view_all">ViewAll</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_delta">DeltaActivity</string>
 </resources>
