--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
-    <string name="app_name">TestAppOne</string>
+    <string name="app_name">Plus Delta</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_plus">PlusActivity</string>
+    <string name="title_activity_plus">Plus</string>
     <string name="title_activity_view_all">ViewAll</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_delta">DeltaActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_users">Users</string>
 </resources>
